fixed blog, blog details, category and search result page left section width and alignment

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_blog.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_blog.scss
@@ -8,7 +8,7 @@
     background: #f5f4f2;
     .left-col {
         @extend %pull-left;
-        width: 698px;
+        width: 864px;
     }
     .right-col {
         @extend %pull-right;
@@ -16,7 +16,7 @@
     }
     .wrapper {
         @include clearfix;
-        padding: 47px 103px 0 46px;
+        padding: 47px 0 0 0;
     }
     .page-header {
         padding-left: 13px;
